# jvc-old

./: .gitignore  CMakeLists.txt  Readme.md  demo.jv  llvm.ps1  llvm.sh
antlr/: GuaJavitaLexer.g4
cmake/: LLVM.cmake  config.cmake
demos/: demo.jv  fib.jv  reverse_num.jv  threads.jv
libs/: CMakeLists.txt
libs/commons/: CMakeLists.txt
libs/commons/include/guajavita/: version.h
libs/commons/src/: version.cpp
libs/llvm/: CMakeLists.txt
libs/llvm/include/guajavita/: jvLLVM.h
libs/llvm/src/: llvm.cpp
src/: main.cpp
tests/: CMakeLists.txt
tests/libs/commons/: CMakeLists.txt
tests/libs/commons/src/: test.cpp
tools/: CMakeLists.txt
tools/jvc/: CMakeLists.txt
tools/jvc/src/: main.cpp
