cmake_minimum_required(VERSION 3.20.0 FATAL_ERROR)
message(STATUS ${CMAKE_HOME_DIRECTORY})
message(STATUS ${CMAKE_INCLUDE_PATH})
project("GuaGavita")
include(cmake/config.cmake)
include(cmake/CPM.cmake)
add_subdirectory(libs)
add_subdirectory(tools)
if (NOT SKIP_TEST)
    add_subdirectory(tests)
endif ()
